@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.803 2007-01-17 15:39:09 castaglia Exp $
+$Id: NEWS,v 1.804 2007-01-18 02:48:32 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -14,6 +14,7 @@ CVS
 - Bug 2875 - Malformed getopt checks cause compilation errors in getopt.c.
 - Bug 2877 - ServerType 'inetd' results in "getnameinfo error: ai_family not
   supported" errors in log.
+- Bug 2878 - Error compiling proftpd on Solaris 2.9 using --with-lastlog.
 
 1.3.1rc2 - Released 12-Jan-2007
 --------------------------------
